# udp_cam_human_recognition

./: UDP_central.py  frame_CENTRAL_raw.jg  partitions.csv  py_another_try.py  py_scaffold.py  py_udp_capturing_server.py  sdkconfig  sdkconfig.old  so_rec.py  stream_source.py  stream_visualizer.py  udp_client.py  udp_server.py
docs/: class_diagram_now.drawio
main/: .registration.c.swp  CMakeLists.txt  analyser.c  analyser.h  camau_controller.c  camau_controller.h  camera.c  camera.h  idf_component.yml  main.c  misc.c  misc.h  register.c  register.h  registration.c  registration.h  sau_heap_debug.c  sau_heap_debug.h  server_communications.c  server_communications.h  tl_infer_agent.cc  tl_infer_agent.h  tl_model.cc  tl_model.h  wifi_connect.c  wifi_connect.h
test/: build-all.sh  build-single.sh  def.h  initcomm_start_stop_unconditional_stream_test  initcomm_start_stop_unconditional_stream_test_sock_handler.c  initcomm_test  initcomm_test_sock_handler.c  interactive_test  interactive_test_sock_handler.c  nop_test  nop_test_sock_handler.c  registration_test  registration_test_sock_handler.c  run-all.sh  run-single.sh  start_unconditional_stream_test  start_unconditional_stream_test_sock_handler.c  stop_unconditional_stream_test  stop_unconditional_stream_test_sock_handler.c  test-config.sh  test.c  test_handlers.c  test_handlers.h
